--- a/sec2_gr3_fe_src/Addequipmentrental.html
+++ b/sec2_gr3_fe_src/Addequipmentrental.html
@@ -9,7 +9,6 @@
 </head>
 
 <body>
-    <!-- Top Navigation -->
     <div class="top-nav">
         <div class="menu-icon">
             <span></span>
@@ -23,38 +22,34 @@
     </div>
 
     <div class="container">
-        <!-- Sidebar -->
         <aside class="sidebar">
             <div class="user-info">
                 <div class="user-avatar-large"></div>
                 <h3>Admin user</h3>
-                <p>Thosaporn</p>
             </div>
-
             <div class="sidebar-title">Organization Management</div>
-
             <nav class="sidebar-nav">
-                <a href="#" class="nav-item">
+                <a href="manageuser.html" class="nav-item">
                     <svg viewBox="0 0 24 24" fill="currentColor">
                         <path
                             d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z" />
                     </svg>
                     User
                 </a>
-                <a href="#" class="nav-item">
+                <a href="Mainfacility.html" class="nav-item">
                     <svg viewBox="0 0 24 24" fill="currentColor">
                         <path d="M12 3L2 12h3v8h6v-6h2v6h6v-8h3L12 3z" />
                     </svg>
                     Facility
                 </a>
-                <a href="#" class="nav-item">
+                <a href="Mainequipment.html" class="nav-item">
                     <svg viewBox="0 0 24 24" fill="currentColor">
                         <path
                             d="M20.57 14.86L22 13.43 20.57 12 17 15.57 8.43 7 12 3.43 10.57 2 9.14 3.43 7.71 2 5.57 4.14 4.14 2.71 2.71 4.14l1.43 1.43L2 7.71l1.43 1.43L2 10.57 3.43 12 7 8.43 15.57 17 12 20.57 13.43 22l1.43-1.43L16.29 22l2.14-2.14 1.43 1.43 1.43-1.43-1.43-1.43L22 16.29z" />
                     </svg>
                     Equipment
                 </a>
-                <a href="#" class="nav-item">
+                <a href="Maintournament.html" class="nav-item">
                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none">
                         <path
                             d="M20 7h-4V5l-2-2h-4L8 5v2H4c-1.1 0-2 .9-2 2v11c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V9c0-1.1-.9-2-2-2zM10 5h4v2h-4V5zM9 18H6v-2h3v2zm0-4H6v-2h3v2zm4 4h-2v-2h2v2zm0-4h-2v-2h2v2zm5 4h-3v-2h3v2zm0-4h-3v-2h3v2z"
@@ -62,7 +57,7 @@
                     </svg>
                     Tournament
                 </a>
-                <a href="#" class="nav-item">
+                <a href="Mainbooking.html" class="nav-item">
                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none">
                         <path
                             d="M19 3h-4.18C14.4 1.84 13.3 1 12 1c-1.3 0-2.4.84-2.82 2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm-7 0c.55 0 1 .45 1 1s-.45 1-1 1-1-.45-1-1 .45-1 1-1zm2 14H7v-2h7v2zm3-4H7v-2h10v2zm0-4H7V7h10v2z"
@@ -70,7 +65,7 @@
                     </svg>
                     Booking History
                 </a>
-                <a href="#" class="nav-item active">
+                <a href="Mainequipmentrental.html" class="nav-item active">
                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none">
                         <circle cx="12" cy="12" r="3.5" fill="currentColor" />
                         <path
@@ -82,54 +77,52 @@
             </nav>
         </aside>
 
-        <!-- Main Content -->
         <main class="main-content">
-            <!-- Edit Form -->
             <div class="edit-form-container">
-                <a href="#" class="back-link">
-                    <svg width="20" height="20" viewBox="0 0 20 20" fill="none">
-                        <path d="M12.5 15L7.5 10L12.5 5" stroke="currentColor" stroke-width="2" stroke-linecap="round"
-                            stroke-linejoin="round" />
+                <a href="Mainequipmentrental.html" class="back-link">
+                    <svg width="20" height="20" viewBox="0 0 20 20" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                        <path d="M12.5 15L7.5 10L12.5 5" />
                     </svg>
                     Back
                 </a>
 
                 <h1>Add New Equipment Rental History</h1>
 
-                <form class="edit-form">
+                <form class="edit-form" id="add-rental-form">
                     <div class="form-group">
                         <label>User ID</label>
-                        <input type="text" class="form-input" placeholder="">
+                        <input type="text" class="form-input" id="userId" placeholder="เช่น U0000001" required>
                     </div>
 
                     <div class="form-group">
                         <label>Equipment ID</label>
-                        <input type="text" class="form-input" placeholder="">
+                        <input type="text" class="form-input" id="equipId" placeholder="เช่น E0000001" required>
                     </div>
 
                     <div class="form-group">
                         <label>Quantity</label>
-                        <input type="text" class="form-input" placeholder="">
+                        <input type="number" class="form-input" id="quantity" placeholder="เช่น 2" required>
                     </div>
 
                     <div class="form-group">
                         <label>Rental Start DateTime</label>
-                        <input type="datetime-local" class="form-input">
+                        <input type="datetime-local" class="form-input" id="startDateTime" required>
                     </div>
 
                     <div class="form-group">
                         <label>Rental End DateTime</label>
-                        <input type="datetime-local" class="form-input">
+                        <input type="datetime-local" class="form-input" id="endDateTime" required>
                     </div>
 
                     <div class="form-group">
-                        <label>Return DateTime</label>
-                        <input type="datetime-local" class="form-input">
+                        <label>Return DateTime (ถ้ามี)</label>
+                        <input type="datetime-local" class="form-input" id="returnDateTime">
                     </div>
 
                     <div class="form-group">
                         <label>Status</label>
-                        <select class="form-select">
+                        <select class="form-select" id="status" required>
+                            <option value="">เลือกสถานะ</option>
                             <option>Completed</option>
                             <option>Cancelled</option>
                             <option>In Use</option>
@@ -142,6 +135,40 @@
             </div>
         </main>
     </div>
-</body>
 
+    <script>
+        document.getElementById('add-rental-form').addEventListener('submit', async function(e) {
+            e.preventDefault();
+
+            const data = {
+                User_ID: document.getElementById('userId').value,
+                Equipment_ID: document.getElementById('equipId').value,
+                Quantity: document.getElementById('quantity').value,
+                RentalStartDateTime: document.getElementById('startDateTime').value,
+                RentalEndDateTime: document.getElementById('endDateTime').value,
+                ReturnDateTime: document.getElementById('returnDateTime').value, // (ส่งค่าว่างถ้าไม่ได้กรอก)
+                Status: document.getElementById('status').value
+            };
+
+            try {
+                const response = await fetch('/api/equipment-rentals', {
+                    method: 'POST',
+                    headers: { 'Content-Type': 'application/json' },
+                    body: JSON.stringify(data)
+                });
+                
+                const result = await response.json();
+
+                if (result.success) {
+                    alert('✅ เพิ่มข้อมูลการเช่าสำเร็จ!');
+                    window.location.href = 'Mainequipmentrental.html';
+                } else {
+                    alert('❌ เพิ่มข้อมูลไม่สำเร็จ: ' + result.message);
+                }
+            } catch (error) {
+                console.error('Error:', error);
+            }
+        });
+    </script>
+</body>
 </html>
