--- a/sec2_gr3_fe_src/Editequipment.html
+++ b/sec2_gr3_fe_src/Editequipment.html
@@ -14,7 +14,7 @@
 
     <div class="container">
         <aside class="sidebar">
-            <div class="user-info"><div class="user-avatar-large"></div><h3>Admin user</h3><p>Thosaporn</p></div>
+            <div class="user-info"><div class="user-avatar-large"></div><h3>Admin user</h3></div>
             <div class="sidebar-title">Organization Management</div>
             <nav class="sidebar-nav">
                 <a href="manageuser.html" class="nav-item"><svg width="24" height="24" viewBox="0 0 24 24" fill="none"><path d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z" fill="currentColor"/></svg> User</a>
