--- a/sec2_gr3_fe_src/Facility.html
+++ b/sec2_gr3_fe_src/Facility.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Facility Results - Sport Hub</title>
+    <title>Facility - Sport Hub</title>
     <link rel="stylesheet" href="/sec2_gr3_fe_src/css/main-style.css">
     <link rel="stylesheet" href="/sec2_gr3_fe_src/css/results-f-t-style.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Prompt:wght@300;400;700&display=swap" rel="stylesheet">
 </head>
 <body>
 
@@ -16,7 +19,7 @@
                 <ul>
                     <li><a href="Facility.html">Facility</a></li>
                     <li><a href="Tournament.html">Tournament</a></li>
-                    <li><a href="#">Booking Check</a></li>
+                    <li><a href="#" id="booking-check-link">Booking Check</a></li>
                     <li><a href="Contact.html">Contact</a></li>
                 </ul>
             </nav>
@@ -42,10 +45,10 @@
                     </div>
                     <div class="card-content-f">
                         <h3 class="card-title">Football</h3>
-                        <p class="card-info">ประเภท : ฟุตบอล</p>
-                        <p class="card-info">คำอธิบาย : XXXXXXX</p>
-                        <p class="card-info">เวลา เปิด/ปิด : XX:XX-XX:XX</p>
-                        <p class="card-info">สถานะ : XXXXX</p>
+                        <p class="card-info">Sport Type : Football</p>
+                        <p class="card-info"> Description : XXXXXXX</p>
+                        <p class="card-info">Open–close time : XX:XX-XX:XX</p>
+                        <p class="card-info">Status : XXXXX</p>
                     </div>
                     <div class="card-action">
                         <a href="#" class="booking-btn">Booking Now!</a>
@@ -58,10 +61,10 @@
                     </div>
                     <div class="card-content-f">
                         <h3 class="card-title">Badminton</h3>
-                        <p class="card-info">ประเภท : แบดมินตัน</p>
-                        <p class="card-info">คำอธิบาย : XXXXXXX</p>
-                        <p class="card-info">เวลา เปิด/ปิด : XX:XX-XX:XX</p>
-                        <p class="card-info">สถานะ : XXXXX</p>
+                        <p class="card-info">Sport Type : Badminton</p>
+                        <p class="card-info"> Description : XXXXXXX</p>
+                        <p class="card-info">Open–close time : XX:XX-XX:XX</p>
+                        <p class="card-info">Status : XXXXX</p>
                     </div>
                     <div class="card-action">
                         <a href="" class="booking-btn">Booking Now!</a>
@@ -74,10 +77,10 @@
                     </div>
                     <div class="card-content-f">
                         <h3 class="card-title">Ping Pong</h3>
-                        <p class="card-info">ประเภท : ปิงปอง</p>
-                        <p class="card-info">คำอธิบาย : XXXXXXX</p>
-                        <p class="card-info">เวลา เปิด/ปิด : XX:XX-XX:XX</p>
-                        <p class="card-info">สถานะ : XXXXX</p>
+                        <p class="card-info">Sport Type : Ping Pong</p>
+                        <p class="card-info"> Description : XXXXXXX</p>
+                        <p class="card-info">Open–close time : XX:XX-XX:XX</p>
+                        <p class="card-info">Status : XXXXX</p>
                     </div>
                     <div class="card-action">
                         <a href="" class="booking-btn">Booking Now!</a>
@@ -92,5 +95,23 @@
         <div class="container"></div>
     </footer>
 
+    <script>
+// 1. ค้นหาลิงก์ "Booking Check" ที่เราเพิ่งเพิ่ม ID ให้
+        const bookingCheckLink = document.getElementById('booking-check-link');
+
+        // 2. เพิ่ม Event Listener เพื่อดักฟังการ "คลิก"
+        bookingCheckLink.addEventListener('click', function(event) {
+            
+            // 3. หยุดการทำงานปกติของลิงก์ (กันไม่ให้หน้าเว็บเด้งไปด้านบน)
+            event.preventDefault(); 
+            
+            // 4. แสดงข้อความแจ้งเตือนตามที่คุณต้องการ
+        alert('Please Login First !');
+
+            // 5. (แนะนำ) เมื่อผู้ใช้กด "OK" ให้พาไปหน้า Login
+            window.location.href = 'Choose_login.html';
+        });
+
+    </script>
 </body>
 </html>
