--- a/sec2_gr3_fe_src/Register_page3.html
+++ b/sec2_gr3_fe_src/Register_page3.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Register - Step 3</title>
+    <title>Register3 - Sport Hub</title>
     <link rel="stylesheet" href="/sec2_gr3_fe_src/css/login-regis-style.css">
 </head>
 <body>
