--- a/sec2_gr3_fe_src/AddAdmin.html
+++ b/sec2_gr3_fe_src/AddAdmin.html
@@ -182,6 +182,17 @@
                 alert('เกิดข้อผิดพลาดในการเชื่อมต่อ Server');
             }
         });
+
+                document.querySelector('.menu-icon').addEventListener('click', function() {
+            if (confirm('คุณต้องการ Logout และกลับไปหน้า Landing หรือไม่?')) {
+                // เคลียร์ข้อมูล Login (ถ้ามี)
+                sessionStorage.clear();
+                localStorage.clear();
+                
+                // กลับไปหน้า Landing.html (ซึ่งอยู่ที่ root '/')
+                window.location.href = '/'; 
+            }
+        });
     </script>
 </body>
 </html>
