--- a/sec2_gr3_fe_src/Addbooking.html
+++ b/sec2_gr3_fe_src/Addbooking.html
@@ -145,6 +145,17 @@
                 console.error('Error:', error);
             }
         });
+
+                document.querySelector('.menu-icon').addEventListener('click', function() {
+            if (confirm('คุณต้องการ Logout และกลับไปหน้า Landing หรือไม่?')) {
+                // เคลียร์ข้อมูล Login (ถ้ามี)
+                sessionStorage.clear();
+                localStorage.clear();
+                
+                // กลับไปหน้า Landing.html (ซึ่งอยู่ที่ root '/')
+                window.location.href = '/'; 
+            }
+        });
     </script>
 </body>
 </html>
