--- a/sec2_gr3_fe_src/Editequipment.html
+++ b/sec2_gr3_fe_src/Editequipment.html
@@ -143,6 +143,17 @@
 
         // สั่งให้โหลดข้อมูลทันทีที่เปิดหน้าเว็บ
         window.onload = loadEquipmentData;
+
+                document.querySelector('.menu-icon').addEventListener('click', function() {
+            if (confirm('คุณต้องการ Logout และกลับไปหน้า Landing หรือไม่?')) {
+                // เคลียร์ข้อมูล Login (ถ้ามี)
+                sessionStorage.clear();
+                localStorage.clear();
+                
+                // กลับไปหน้า Landing.html (ซึ่งอยู่ที่ root '/')
+                window.location.href = '/'; 
+            }
+        });
     </script>
 </body>
 </html>
