--- a/sec2_gr3_fe_src/Mainfacility.html
+++ b/sec2_gr3_fe_src/Mainfacility.html
@@ -179,8 +179,20 @@
         // ผูกปุ่ม Search
         document.getElementById('btnSearch').addEventListener('click', fetchFacilities);
 
+        
         // โหลดข้อมูลตอนเปิดหน้าเว็บ
         window.onload = fetchFacilities;
+
+                document.querySelector('.menu-icon').addEventListener('click', function() {
+            if (confirm('คุณต้องการ Logout และกลับไปหน้า Landing หรือไม่?')) {
+                // เคลียร์ข้อมูล Login (ถ้ามี)
+                sessionStorage.clear();
+                localStorage.clear();
+                
+                // กลับไปหน้า Landing.html (ซึ่งอยู่ที่ root '/')
+                window.location.href = '/'; 
+            }
+        });
     </script>
 </body>
 </html>
