--- a/sec2_gr3_fe_src/Maintournament.html
+++ b/sec2_gr3_fe_src/Maintournament.html
@@ -216,6 +216,17 @@
 
         // โหลดข้อมูลครั้งแรกเมื่อหน้าเว็บเปิด
         window.onload = fetchTournaments;
+
+                document.querySelector('.menu-icon').addEventListener('click', function() {
+            if (confirm('คุณต้องการ Logout และกลับไปหน้า Landing หรือไม่?')) {
+                // เคลียร์ข้อมูล Login (ถ้ามี)
+                sessionStorage.clear();
+                localStorage.clear();
+                
+                // กลับไปหน้า Landing.html (ซึ่งอยู่ที่ root '/')
+                window.location.href = '/'; 
+            }
+        });
     </script>
 </body>
 </html>
